Gjorde klart min film sida. La till all nödvändig information

--- a/barbie.html
+++ b/barbie.html
@@ -8,10 +8,27 @@
 
 </head>
 <body>
-<h1>Barbie</h1> 
-    <div class="barbie">
-    <img src="/images/barbie.jpg" alt="barbie">
+    <h1>Barbie</h1> 
+    <div class="container">
+        <div class="barbie">
+            <img src="/images/barbie.jpg" alt="barbie">
+        </div>    
+        <div class="Titel">
+            Barbie
+        </div>
+        <div class="info">
+            Filmen kretsar kring en docka, Barbie, som lever i Barbieland. <br>
+            Efter att hon upptäcker en defekt där hon plötsligt har raka <br>
+            fötter måste hon resa från Barbieland till den riktiga världen. <br>
+            Ken följer med henne och upptäcker något som heter patriarkatet. <br>
+            Greta Gerwig 21 juli 2023
+        </div>
+        <div class="Skapare">
+            Greta Gerwig
+        </div>
+        <div class="datum">
+            21 juli 2023
+        </div>
     </div>
-    
 </body>
 </html>
