--- a/oppenhimer.html
+++ b/oppenhimer.html
@@ -8,8 +8,23 @@
 </head>
 <body>
     <h1>Oppenhimer</h1>
-    <u>
-    <img src="/Images/oppenheimar.jpg" alt="oppenhimer">
-    </u>
+    <div class="container">
+        <div class="oppenhimer">
+            <img src="Images/oppenheimar.jpg" alt="oppenhimer">
+        </div>    
+        <div class="Titel">
+            Oppenhimer
+        </div>
+        <div class="info">
+            Berättelsen om den amerikanske vetenskapsmannen <br>
+             J. Robert Oppenheimer och hans roll i utvecklingen av atombomben. <br> 
+        </div>
+        <div class="Skapare">
+            Christopher Nolan
+        </div>
+        <div class="datum">
+            21 juli 2023
+        </div>
+    </div>    
 </body>
 </html>
