--- a/transformersRiseOfTheBeasts.html
+++ b/transformersRiseOfTheBeasts.html
@@ -9,5 +9,27 @@
 <body>
     <h1>TransformersRiseOfTheBeasts</h1>
     
+    <div class="container">
+        <div class="transformersRiseOfTheBeasts">
+            <img src="/Images/transformersRiseoftheBeasts.jpg" alt="transformersRiseOfTheBeasts">
+        </div>    
+        <div class="Titel">
+            TransformersRiseOfTheBeasts
+        </div>
+
+        <div class="info">
+            Av en slump råkar tre unga människor hamna under autoboternas beskydd,<br>
+             efter att ha blivit inblandade i kampen mellan de utomjordiska robotarna. <br>
+              Samtidigt gör Optimus Prime och gänget en skrämmande upptäckt. <br>
+               Decepticonerna har samlat på sig en helt ny typ av energon <br>
+                - och det kan betyda slutet för planeten jorden! <br> 
+        </div>
+        <div class="Skapare">
+            Don Murphy och Tom DeSanto 
+        </div>
+        <div class="datum">
+            9 juni 2023
+        </div>
+    </div> 
 </body>
 </html>
